--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -17,4 +17,110 @@ body {
 
 .swiper-pagination-bullet-active {
   background-color:rgb(241, 245, 241); 
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  font-family: "Lato", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  @apply leading-[1.2] font-semibold;
+}
+
+h2 {
+  @apply text-2xl sm:text-3xl;
+}
+
+p {
+  @apply leading-normal text-sm sm:text-base md:text-lg text-gray-600;
+}
+
+.section {
+  @apply pt-[40px]
+}
+
+.subtitle {
+  @apply text-[#ffc228] font-medium;
+}
+
+.card-title {
+  @apply font-semibold text-[22px] hover:text-[#fece51] transition-colors md:text-2xl;
+}
+
+button {
+  @apply cursor-pointer;
+}
+
+.primary-btn {
+  @apply bg-white text-gray-900 px-8 py-4 rounded-[50px] hover:bg-white/90 transition-all;
+}
+
+.secondary-btn {
+  @apply bg-[#fece51] text-gray-100 hover:bg-[#e6b94a] block max-w-max px-8 py-4 rounded-[50px] transition-colors;
+}
+
+/* Header Styles */
+.header {
+  @apply w-full py-4  fixed top-0 left-0 z-10 text-neutral-50;
+}
+
+.header.active {
+  @apply bg-white border-b border-gray-100 shadow-2xl;
+  /* animation: slideIn 0.4s forwards ease-in-out; */
+}
+
+.center{
+ @apply flex flex-col items-center justify-center h-screen
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.navbar {
+  @apply bg-neutral-100 text-gray-950 fixed top-0 right-0 p-7 max-w-[280px] w-full h-screen z-40 transition-transform translate-x-[280px] flex flex-col;
+}
+
+.navbar.active {
+  @apply translate-x-0;
+}
+
+.overlay {
+  @apply fixed top-0 left-0 bg-sky-950/80 w-full h-screen opacity-0 pointer-events-none duration-300;
+}
+
+.overlay.active {
+  @apply opacity-100 pointer-events-auto;
+}
+
+/* Hero Styles */
+/* .hero {
+  @apply min-h-[calc(100vh-100px)] sm:min-h-[720px] bg-cover bg-no-repeat flex items-stretch py-10;
+} */
+
+.hero {
+  @apply min-h-screen xs:min-h-[540px] sm:min-h-[720px]  lg:min-h-[860px] bg-cover bg-no-repeat flex   items-start md:items-center py-10 mx-auto;
+}
+.container {
+  @apply px-4 xs:max-w-[540px] sm:max-w-[720px] md:max-w-[960px] lg:max-w-[1150px] xl:max-w-[1350px] mx-auto;
+}
+
+/* Custom Swiper pagination dot color */
+.swiper-pagination-bullet {
+  @apply bg-[#a09f9b] opacity-50;
+}
+.swiper-pagination-bullet-active {
+  @apply bg-[#fece51] opacity-100;
 }
